# rust-rocket-blog

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yaml
migrations/: 20230701015048_Create_post_and_tags_table.up.sql
migrations/2023-07-08-211549_create_posts_and_tags/: down.sql
queries/post/: list.sql
src/: db.rs  main.rs  schema.rs
src/controllers/: blog_controller.rs  mapping.rs  mod.rs
src/dto/: create_post_dto.rs  create_tag_dto.rs  mod.rs
src/models/: mod.rs  post.rs  post_tag.rs  tag.rs  uuid.rs
src/repositories/: mod.rs  post_repository.rs  post_with_tags_dto.rs  tag_repository.rs
