[package]
name = "rust-rocket-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_postgres", "sqlx"] }
uuid = { version = "1.4.0", features = ["v4"] }
