[package]
name = "rust-rocket-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
dotenv = "0.15.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_postgres", "sqlx", "sqlx_macros"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sqlx = { version = "0.6.3", features = ["postgres", "uuid", "time"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
