[package]
name = "rust-rocket-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
diesel = { version = "2.1.0", features = ["postgres", "uuid", "serde_json"] }
dotenv = "0.15.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
